# Eg

./: CMakeLists.txt  first.c
.github/workflows/: cmake.yml
